<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toggle="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ble.bleserial.activity.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble_open"
            android:layout_centerVertical="true"
            android:id="@+id/tv_bluetooth_info"/>

        <com.zcw.togglebutton.ToggleButton
            android:layout_width="54dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            toggle:tbBorderWidth="2dp"
            toggle:tbOffColor="@color/colorGray"
            toggle:tbOnColor="@color/colorGreen"
            toggle:tbSpotColor="@color/colorWhite"
            android:id="@+id/tg_ble"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ble"
            android:layout_toLeftOf="@+id/tg_ble"
            android:layout_toStartOf="@+id/tg_ble"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padding_5dp"/>
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/scan_info"
        android:background="@color/colorGray"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/padding_5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_10dp">

        <!--<Button-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/btn_scan"-->
            <!--android:layout_marginStart="@dimen/margin_10dp"-->
            <!--android:layout_marginEnd="@dimen/margin_10dp"-->
            <!--android:id="@+id/btn_scan"-->
            <!--/>-->
        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/btn_scan"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btn_scan"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/blue_normal"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/btn_scan"
            custom:pb_textProgress="@string/scanning" />

        <!--<Button-->
            <!--android:id="@+id/btn_send"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:text="@string/btn_send"-->
            <!--android:layout_marginStart="@dimen/margin_10dp"-->
            <!--android:layout_marginEnd="@dimen/margin_10dp"/>-->
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bond_device_info"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@color/colorDarkGreen"
        android:padding="@dimen/padding_5dp"
        android:textColor="@color/colorWhite"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/rv_bond_devices_list"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbond_device_info"
        android:layout_margin="@dimen/margin_10dp"
        android:background="@color/colorOrigin"
        android:padding="@dimen/padding_5dp"
        android:textColor="@color/colorWhite"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:id="@+id/rv_new_devices_list"
        />

</LinearLayout>
